# The_Thing_Game

./: .gitignore  .pre-commit-config.yaml  Readme.md  app.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
FE/: authorization.html  base_front.html  registration.css  styles.css
be/: app.py  form_datas.py  routes.py  table_models.py
fe/templates/: base.html  registration.html
instance/: users.db
