[tool.poetry]
name = "the-thing-game"
version = "0.1.0"
description = "the_thing_game"
authors = ["Vladimirov Nikita Mikhaylovich"]
license = "no"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
flask = "^3.0.3"
flask-wtf = "^1.2.2"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
isort = "5.10.0"
flake8 = "^7.1.1"
black = "22.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310"]  # Укажите вашу версию Python

[tool.isort]
profile = "black"  # Использовать профайл black для совместимости
line_length = 120
known_third_party = []
skip_gitignore = true
